[gd_scene load_steps=10 format=2]

[ext_resource path="res://levels/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/Levelboss.gd" type="Script" id=2]
[ext_resource path="res://menu/bar.png" type="Texture" id=3]
[ext_resource path="res://music/boss.ogg" type="AudioStream" id=4]
[ext_resource path="res://enemies/boss.png" type="Texture" id=5]
[ext_resource path="res://music/victory.ogg" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 128 )

[node name="Level" instance=ExtResource( 1 )]
script = ExtResource( 2 )
music = ExtResource( 4 )

[node name="BgTiles" parent="." index="0"]
tile_data = PoolIntArray( -1, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, -65530, 2, 0, -65529, 2, 0, -65528, 2, 0, -65527, 2, 0, -65526, 2, 0, -65525, 2, 0, -65524, 2, 0, -65523, 2, 0, -65522, 2, 0, -65521, 2, 0, -65520, 2, 0, -65519, 2, 0, -65518, 2, 0, -65517, 2, 0, -65516, 2, 0, -65515, 2, 0, -65514, 2, 0, -65513, 2, 0, -65512, 2, 0, -65511, 2, 0, -65510, 2, 0, -65509, 2, 0, -65508, 2, 0, -65507, 2, 0, -65506, 2, 0, -65505, 2, 0, -65504, 2, 0, 65535, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 2, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 3, 11, 2, 3, 12, 2, 0, 13, 2, 3, 14, 2, 0, 15, 2, 2, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 20, 2, 0, 21, 2, 0, 22, 2, 3, 23, 2, 1, 24, 2, 0, 25, 2, 2, 26, 2, 1, 27, 2, 1, 28, 2, 0, 29, 2, 0, 30, 2, 0, 31, 2, 0, 32, 2, 0, 131071, 2, 0, 65536, 2, 0, 65537, 2, 3, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 3, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 65550, 2, 0, 65551, 2, 0, 65552, 2, 0, 65553, 2, 1, 65554, 2, 1, 65555, 2, 2, 65556, 2, 3, 65557, 2, 3, 65558, 2, 0, 65559, 2, 3, 65560, 2, 3, 65561, 2, 0, 65562, 2, 0, 65563, 2, 0, 65564, 2, 0, 65565, 2, 0, 65566, 2, 1, 65567, 2, 0, 65568, 2, 0, 196607, 2, 0, 131072, 2, 0, 131073, 2, 3, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 2, 131080, 2, 2, 131081, 2, 0, 131082, 2, 2, 131083, 2, 0, 131084, 2, 0, 131085, 2, 0, 131086, 2, 0, 131087, 2, 0, 131088, 2, 0, 131089, 2, 0, 131090, 2, 0, 131091, 2, 0, 131092, 2, 0, 131093, 2, 0, 131094, 2, 0, 131095, 2, 0, 131096, 2, 0, 131097, 2, 0, 131098, 2, 0, 131099, 2, 0, 131100, 2, 0, 131101, 2, 0, 131102, 2, 2, 131103, 2, 1, 131104, 2, 0, 262143, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 3, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 2, 0, 196622, 2, 1, 196623, 2, 0, 196624, 2, 0, 196625, 2, 3, 196626, 2, 3, 196627, 2, 0, 196628, 2, 1, 196629, 2, 1, 196630, 2, 0, 196631, 2, 1, 196632, 2, 0, 196633, 2, 0, 196634, 2, 0, 196635, 2, 3, 196636, 2, 0, 196637, 2, 0, 196638, 2, 0, 196639, 2, 1, 196640, 2, 0, 327679, 2, 0, 262144, 2, 0, 262145, 2, 3, 262146, 2, 0, 262147, 2, 0, 262148, 2, 2, 262149, 2, 0, 262150, 2, 2, 262151, 2, 1, 262152, 2, 0, 262153, 2, 0, 262154, 2, 0, 262155, 2, 0, 262156, 2, 0, 262157, 2, 0, 262158, 2, 0, 262159, 2, 3, 262160, 2, 3, 262161, 2, 0, 262162, 2, 3, 262163, 2, 1, 262164, 2, 2, 262165, 2, 0, 262166, 2, 1, 262167, 2, 0, 262168, 2, 0, 262169, 2, 0, 262170, 2, 0, 262171, 2, 0, 262172, 2, 2, 262173, 2, 0, 262174, 2, 0, 262175, 2, 1, 262176, 2, 0, 393215, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 1, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 1, 327691, 2, 0, 327692, 2, 0, 327693, 2, 0, 327694, 2, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 327699, 2, 0, 327700, 2, 0, 327701, 2, 0, 327702, 2, 0, 327703, 2, 0, 327704, 2, 0, 327705, 2, 0, 327706, 2, 0, 327707, 2, 2, 327708, 2, 0, 327709, 2, 0, 327710, 2, 0, 327711, 2, 0, 327712, 2, 0, 458751, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 3, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 393226, 2, 0, 393227, 2, 3, 393228, 2, 1, 393229, 2, 0, 393230, 2, 0, 393231, 2, 0, 393232, 2, 0, 393233, 2, 2, 393234, 2, 0, 393235, 2, 0, 393236, 2, 0, 393237, 2, 0, 393238, 2, 0, 393239, 2, 0, 393240, 2, 0, 393241, 2, 0, 393242, 2, 0, 393243, 2, 0, 393244, 2, 0, 393245, 2, 3, 393246, 2, 0, 393247, 2, 0, 393248, 2, 0, 524287, 2, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 3, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 2, 0, 458763, 2, 0, 458764, 2, 0, 458765, 2, 0, 458766, 2, 0, 458767, 2, 0, 458768, 2, 1, 458769, 2, 3, 458770, 2, 0, 458771, 2, 0, 458772, 2, 0, 458773, 2, 0, 458774, 2, 0, 458775, 2, 0, 458776, 2, 0, 458777, 2, 0, 458778, 2, 0, 458779, 2, 0, 458780, 2, 0, 458781, 2, 1, 458782, 2, 0, 458783, 2, 0, 458784, 2, 0, 589823, 2, 0, 524288, 2, 0, 524289, 2, 1, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 2, 524303, 2, 0, 524304, 2, 0, 524305, 2, 0, 524306, 2, 0, 524307, 2, 0, 524308, 2, 0, 524309, 2, 2, 524310, 2, 0, 524311, 2, 0, 524312, 2, 1, 524313, 2, 0, 524314, 2, 0, 524315, 2, 3, 524316, 2, 0, 524317, 2, 0, 524318, 2, 1, 524319, 2, 0, 524320, 2, 0, 655359, 2, 0, 589824, 2, 0, 589825, 2, 1, 589826, 2, 2, 589827, 2, 0, 589828, 2, 2, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 2, 589834, 2, 0, 589835, 2, 3, 589836, 2, 3, 589837, 2, 0, 589838, 2, 2, 589839, 2, 0, 589840, 2, 2, 589841, 2, 0, 589842, 2, 0, 589843, 2, 1, 589844, 2, 3, 589845, 2, 0, 589846, 2, 0, 589847, 2, 0, 589848, 2, 0, 589849, 2, 0, 589850, 2, 1, 589851, 2, 3, 589852, 2, 0, 589853, 2, 3, 589854, 2, 0, 589855, 2, 1, 589856, 2, 0, 720895, 2, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 3, 655364, 2, 0, 655365, 2, 0, 655366, 2, 2, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 2, 0, 655371, 2, 0, 655372, 2, 1, 655373, 2, 0, 655374, 2, 2, 655375, 2, 0, 655376, 2, 0, 655377, 2, 0, 655378, 2, 1, 655379, 2, 0, 655380, 2, 0, 655381, 2, 0, 655382, 2, 0, 655383, 2, 0, 655384, 2, 0, 655385, 2, 0, 655386, 2, 0, 655387, 2, 1, 655388, 2, 3, 655389, 2, 0, 655390, 2, 1, 655391, 2, 0, 655392, 2, 0, 786431, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 3, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 3, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0, 720913, 2, 0, 720914, 2, 0, 720915, 2, 0, 720916, 2, 0, 720917, 2, 0, 720918, 2, 0, 720919, 2, 0, 720920, 2, 1, 720921, 2, 0, 720922, 2, 0, 720923, 2, 0, 720924, 2, 0, 720925, 2, 0, 720926, 2, 0, 720927, 2, 0, 720928, 2, 0, 851967, 2, 0, 786432, 2, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 2, 786439, 2, 0, 786440, 2, 0, 786441, 2, 0, 786442, 2, 0, 786443, 2, 0, 786444, 2, 0, 786445, 2, 0, 786446, 2, 0, 786447, 2, 0, 786448, 2, 1, 786449, 2, 0, 786450, 2, 0, 786451, 2, 0, 786452, 2, 0, 786453, 2, 0, 786454, 2, 0, 786455, 2, 0, 786456, 2, 0, 786457, 2, 0, 786458, 2, 0, 786459, 2, 0, 786460, 2, 3, 786461, 2, 0, 786462, 2, 0, 786463, 2, 0, 786464, 2, 0, 917503, 2, 0, 851968, 2, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 0, 851972, 2, 0, 851973, 2, 1, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 2, 0, 851978, 2, 0, 851979, 2, 2, 851980, 2, 0, 851981, 2, 0, 851982, 2, 0, 851983, 2, 0, 851984, 2, 0, 851985, 2, 0, 851986, 2, 0, 851987, 2, 0, 851988, 2, 0, 851989, 2, 0, 851990, 2, 1, 851991, 2, 0, 851992, 2, 0, 851993, 2, 0, 851994, 2, 0, 851995, 2, 0, 851996, 2, 3, 851997, 2, 3, 851998, 2, 0, 851999, 2, 3, 852000, 2, 0, 983039, 2, 0, 917504, 2, 2, 917505, 2, 0, 917506, 2, 0, 917507, 2, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917511, 2, 0, 917512, 2, 1, 917513, 2, 0, 917514, 2, 1, 917515, 2, 0, 917516, 2, 0, 917517, 2, 0, 917518, 2, 0, 917519, 2, 0, 917520, 2, 0, 917521, 2, 0, 917522, 2, 0, 917523, 2, 3, 917524, 2, 0, 917525, 2, 0, 917526, 2, 0, 917527, 2, 0, 917528, 2, 1, 917529, 2, 1, 917530, 2, 0, 917531, 2, 3, 917532, 2, 0, 917533, 2, 0, 917534, 2, 0, 917535, 2, 0, 917536, 2, 0, 1048575, 2, 0, 983040, 2, 0, 983041, 2, 0, 983042, 2, 0, 983043, 2, 0, 983044, 2, 1, 983045, 2, 0, 983046, 2, 0, 983047, 2, 0, 983048, 2, 0, 983049, 2, 1, 983050, 2, 0, 983051, 2, 0, 983052, 2, 2, 983053, 2, 0, 983054, 2, 0, 983055, 2, 0, 983056, 2, 3, 983057, 2, 1, 983058, 2, 1, 983059, 2, 0, 983060, 2, 0, 983061, 2, 3, 983062, 2, 0, 983063, 2, 0, 983064, 2, 0, 983065, 2, 0, 983066, 2, 0, 983067, 2, 1, 983068, 2, 0, 983069, 2, 0, 983070, 2, 3, 983071, 2, 0, 983072, 2, 0, 1114111, 2, 0, 1048576, 2, 0, 1048577, 2, 0, 1048578, 2, 0, 1048579, 2, 3, 1048580, 2, 0, 1048581, 2, 0, 1048582, 2, 2, 1048583, 2, 3, 1048584, 2, 0, 1048585, 2, 0, 1048586, 2, 0, 1048587, 2, 0, 1048588, 2, 0, 1048589, 2, 0, 1048590, 2, 1, 1048591, 2, 0, 1048592, 2, 0, 1048593, 2, 2, 1048594, 2, 2, 1048595, 2, 0, 1048596, 2, 0, 1048597, 2, 1, 1048598, 2, 3, 1048599, 2, 0, 1048600, 2, 3, 1048601, 2, 0, 1048602, 2, 1, 1048603, 2, 0, 1048604, 2, 0, 1048605, 2, 1, 1048606, 2, 0, 1048607, 2, 0, 1048608, 2, 0, 1179647, 2, 0, 1114112, 2, 0, 1114113, 2, 1, 1114114, 2, 0, 1114115, 2, 1, 1114116, 2, 2, 1114117, 2, 0, 1114118, 2, 1, 1114119, 2, 3, 1114120, 2, 0, 1114121, 2, 0, 1114122, 2, 0, 1114123, 2, 0, 1114124, 2, 2, 1114125, 2, 0, 1114126, 2, 0, 1114127, 2, 0, 1114128, 2, 0, 1114129, 2, 0, 1114130, 2, 0, 1114131, 2, 0, 1114132, 2, 0, 1114133, 2, 0, 1114134, 2, 3, 1114135, 2, 0, 1114136, 2, 0, 1114137, 2, 0, 1114138, 2, 0, 1114139, 2, 0, 1114140, 2, 0, 1114141, 2, 3, 1114142, 2, 3, 1114143, 2, 0, 1114144, 2, 0, 1245183, 2, 0, 1179648, 2, 0, 1179649, 2, 0, 1179650, 2, 0, 1179651, 2, 0, 1179652, 2, 0, 1179653, 2, 0, 1179654, 2, 0, 1179655, 2, 0, 1179656, 2, 0, 1179657, 2, 0, 1179658, 2, 2, 1179659, 2, 0, 1179660, 2, 0, 1179661, 2, 0, 1179662, 2, 0, 1179663, 2, 0, 1179664, 2, 1, 1179665, 2, 3, 1179666, 2, 2, 1179667, 2, 0, 1179668, 2, 2, 1179669, 2, 3, 1179670, 2, 2, 1179671, 2, 0, 1179672, 2, 0, 1179673, 2, 0, 1179674, 2, 0, 1179675, 2, 0, 1179676, 2, 0, 1179677, 2, 0, 1179678, 2, 0, 1179679, 2, 0, 1179680, 2, 0, 1310719, 2, 0, 1245184, 2, 0, 1245185, 2, 0, 1245186, 2, 0, 1245187, 2, 0, 1245188, 2, 0, 1245189, 2, 0, 1245190, 2, 0, 1245191, 2, 0, 1245192, 2, 0, 1245193, 2, 0, 1245194, 2, 0, 1245195, 2, 0, 1245196, 2, 0, 1245197, 2, 0, 1245198, 2, 3, 1245199, 2, 0, 1245200, 2, 0, 1245201, 2, 0, 1245202, 2, 0, 1245203, 2, 3, 1245204, 2, 0, 1245205, 2, 0, 1245206, 2, 0, 1245207, 2, 0, 1245208, 2, 3, 1245209, 2, 0, 1245210, 2, 0, 1245211, 2, 0, 1245212, 2, 2, 1245213, 2, 0, 1245214, 2, 0, 1245215, 2, 0, 1245216, 2, 0, 1376255, 2, 0, 1310720, 2, 0, 1310721, 2, 0, 1310722, 2, 0, 1310723, 2, 0, 1310724, 2, 0, 1310725, 2, 0, 1310726, 2, 0, 1310727, 2, 0, 1310728, 2, 0, 1310729, 2, 0, 1310730, 2, 0, 1310731, 2, 0, 1310732, 2, 0, 1310733, 2, 0, 1310734, 2, 0, 1310735, 2, 0, 1310736, 2, 0, 1310737, 2, 0, 1310738, 2, 0, 1310739, 2, 0, 1310740, 2, 0, 1310741, 2, 0, 1310742, 2, 0, 1310743, 2, 0, 1310744, 2, 0, 1310745, 2, 0, 1310746, 2, 0, 1310747, 2, 0, 1310748, 2, 0, 1310749, 2, 0, 1310750, 2, 0, 1310751, 2, 0, 1310752, 2, 0 )

[node name="FgTiles" parent="." index="1"]
tile_data = PoolIntArray( -131065, -1610612731, 1, -131048, -1610612731, 0, -65526, -1610612731, 0, -65515, -1610612731, 1, 4, -1610612731, 0, 27, -1610612731, 1, 65538, 4, 0, 65539, 4, 1, 65540, 4, 1, 65541, 4, 1, 65542, 4, 1, 65543, 4, 1, 65544, 4, 1, 65545, 4, 1, 65546, 4, 1, 65547, 4, 1, 65548, 4, 1, 65549, 4, 1, 65550, 4, 1, 65551, 4, 1, 65552, 4, 1, 65553, 4, 1, 65554, 4, 1, 65555, 4, 1, 65556, 4, 1, 65557, 4, 1, 65558, 4, 1, 65559, 4, 1, 65560, 4, 1, 65561, 4, 1, 65562, 4, 1, 65563, 4, 1, 65564, 4, 1, 65565, 4, 2, 131074, 4, 131072, 131075, 4, 131073, 131076, 4, 131073, 131077, 4, 131073, 131078, 4, 131073, 131079, 4, 131073, 131080, 4, 131073, 131081, 4, 131073, 131082, 4, 131073, 131083, 4, 131073, 131084, 4, 131073, 131085, 4, 131073, 131086, 4, 131073, 131087, 4, 131073, 131088, 4, 131073, 131089, 4, 131073, 131090, 4, 131073, 131091, 4, 131073, 131092, 4, 131073, 131093, 4, 131073, 131094, 4, 131073, 131095, 4, 131073, 131096, 4, 131073, 131097, 4, 131073, 131098, 4, 131073, 131099, 4, 131073, 131100, 4, 131073, 131101, 4, 131074, 262143, 4, 0, 196608, 4, 1, 196609, 4, 1, 196610, 4, 2, 196637, 4, 0, 196638, 4, 1, 196639, 4, 1, 196640, 4, 2, 327679, 4, 65536, 262144, 4, 65537, 262145, 4, 65537, 262146, 4, 65538, 262173, 4, 65536, 262174, 4, 65537, 262175, 4, 65537, 262176, 4, 65538, 393215, 4, 65536, 327680, 4, 65537, 327681, 4, 65537, 327682, 4, 65538, 327709, 4, 65536, 327710, 4, 65537, 327711, 4, 65537, 327712, 4, 65538, 458751, 4, 65536, 393216, 4, 65537, 393217, 4, 65537, 393218, 4, 65538, 393245, 4, 65536, 393246, 4, 65537, 393247, 4, 65537, 393248, 4, 65538, 524287, 4, 65536, 458752, 4, 65537, 458753, 4, 65537, 458754, 4, 65538, 458781, 4, 65536, 458782, 4, 65537, 458783, 4, 65537, 458784, 4, 65538, 589823, 4, 65536, 524288, 4, 65537, 524289, 4, 65537, 524290, 4, 65538, 524317, 4, 65536, 524318, 4, 65537, 524319, 4, 65537, 524320, 4, 65538, 655359, 4, 65536, 589824, 4, 65537, 589825, 4, 65537, 589826, 4, 65538, 589853, 4, 65536, 589854, 4, 65537, 589855, 4, 65537, 589856, 4, 65538, 720895, 4, 65536, 655360, 4, 65537, 655361, 4, 65537, 655362, 4, 65538, 655389, 4, 65536, 655390, 4, 65537, 655391, 4, 65537, 655392, 4, 65538, 786431, 4, 65536, 720896, 4, 65537, 720897, 4, 65537, 720898, 4, 65538, 720925, 4, 65536, 720926, 4, 65537, 720927, 4, 65537, 720928, 4, 65538, 851967, 4, 65536, 786432, 4, 65537, 786433, 4, 65537, 786434, 4, 65538, 786461, 4, 65536, 786462, 4, 65537, 786463, 4, 65537, 786464, 4, 65538, 917503, 4, 65536, 851968, 4, 65537, 851969, 4, 65537, 851970, 4, 65538, 851997, 4, 65536, 851998, 4, 65537, 851999, 4, 65537, 852000, 4, 65538, 983039, 4, 65536, 917504, 4, 65537, 917505, 4, 65537, 917506, 4, 65538, 917533, 4, 65536, 917534, 4, 65537, 917535, 4, 65537, 917536, 4, 65538, 1048575, 4, 65536, 983040, 4, 65537, 983041, 4, 65537, 983042, 4, 65538, 983069, 4, 65536, 983070, 4, 65537, 983071, 4, 65537, 983072, 4, 65538, 1114111, 4, 131072, 1048576, 4, 131073, 1048577, 4, 131073, 1048578, 4, 131074, 1048605, 4, 131072, 1048606, 4, 131073, 1048607, 4, 131073, 1048608, 4, 131074, 1114114, 4, 0, 1114115, 4, 1, 1114116, 4, 1, 1114117, 4, 1, 1114118, 4, 1, 1114119, 4, 1, 1114120, 4, 1, 1114121, 4, 1, 1114122, 4, 1, 1114123, 4, 1, 1114124, 4, 1, 1114125, 4, 2, 1114126, 4, 0, 1114127, 4, 1, 1114128, 4, 1, 1114129, 4, 2, 1114130, 4, 0, 1114131, 4, 1, 1114132, 4, 1, 1114133, 4, 1, 1114134, 4, 1, 1114135, 4, 1, 1114136, 4, 1, 1114137, 4, 1, 1114138, 4, 1, 1114139, 4, 1, 1114140, 4, 1, 1114141, 4, 2, 1179650, 4, 65536, 1179651, 4, 65537, 1179652, 4, 65537, 1179653, 4, 65537, 1179654, 4, 65537, 1179655, 4, 65537, 1179656, 4, 65538, 1179657, 4, 131073, 1179658, 4, 131073, 1179659, 4, 131073, 1179660, 4, 131073, 1179661, 4, 131074, 1179662, 4, 131072, 1179663, 4, 131073, 1179664, 4, 131073, 1179665, 4, 131074, 1179666, 4, 131072, 1179667, 4, 131073, 1179668, 4, 131073, 1179669, 4, 131073, 1179670, 4, 131073, 1179671, 4, 65536, 1179672, 4, 65537, 1179673, 4, 65537, 1179674, 4, 65537, 1179675, 4, 65537, 1179676, 4, 65537, 1179677, 4, 65538, 1245186, 4, 65536, 1245187, 4, 65537, 1245188, 4, 65537, 1245189, 4, 65537, 1245190, 4, 65537, 1245191, 4, 65537, 1245192, 4, 65538, 1245207, 4, 65536, 1245208, 4, 65537, 1245209, 4, 65537, 1245210, 4, 65537, 1245211, 4, 65537, 1245212, 4, 65537, 1245213, 4, 65538, 1310722, 4, 131072, 1310723, 4, 131073, 1310724, 4, 131073, 1310725, 4, 131073, 1310726, 4, 131073, 1310727, 4, 131073, 1310728, 4, 131074, 1310743, 4, 131072, 1310744, 4, 131073, 1310745, 4, 131073, 1310746, 4, 131073, 1310747, 4, 131073, 1310748, 4, 131073, 1310749, 4, 131074 )

[node name="Dog" parent="." index="3"]
position = Vector2( 192, 240 )

[node name="HitBox" type="Area2D" parent="Dog" index="5"]
collision_layer = 0
collision_mask = 4

[node name="Shape" type="CollisionShape2D" parent="Dog/HitBox" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Leash" parent="." index="4"]
position = Vector2( 192, 240 )

[node name="OldRoger" parent="." index="5"]
position = Vector2( 320, 240 )

[node name="TopSmoke" parent="HUD" index="0"]
visible = false

[node name="BossBar" type="TextureProgress" parent="HUD" index="1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -288.0
margin_right = -24.0
margin_bottom = -160.0
rect_scale = Vector2( 2, 2 )
step = 0.01
value = 100.0
texture_under = SubResource( 2 )
texture_progress = SubResource( 3 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomSmoke" parent="HUD" index="2"]
visible = false

[node name="Salami" type="Sprite" parent="." index="8"]
position = Vector2( 256, 16 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 64, 0, 48, 16 )

[node name="Aim" type="Node2D" parent="." index="9"]

[node name="KnifeTimer" type="Timer" parent="." index="10"]
wait_time = 4.0
autostart = true

[node name="YouWin" type="AudioStreamPlayer" parent="." index="11"]
pause_mode = 2
stream = ExtResource( 6 )
bus = "music"
[connection signal="body_entered" from="Dog/HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="KnifeTimer" to="." method="_on_KnifeTimer_timeout"]
